# s3_object_validator

./: README.md  cleaner.py  pyproject.toml  s3-object-validator.py  s3ObjectValidator.py  setup.cfg  setup.py
s3_object_validator/: __main__.py  validator.py
src/s3_object_validator/: validator.py
src/validator/: s3_object_validator.py
tests/: test_cli.py  test_s3_object_validator.py
