[project]
name = "s3_object_validator"
version = "0.0.1"
authors = [
  { name="Scott Cooper", email="sgcooper78@gmail.com" },
]
description = "Validator for S3 object key names"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sgcooper78/s3_object_validator"
"Bug Tracker" = "https://github.com/sgcooper78/s3_object_validator/issues"
