[metadata]
name = s3_object_validator
version = 0.0.1
author = Scott Cooper
author_email = sgcooper78@gmail.com
description = Validator for S3 object key names
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src